Problem set 4C/PS4C/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
17
-classpath
C:\BlueJ\lib\bluejcore.jar;C:\BlueJ\lib\javafx-base-20.0.1-win.jar;C:\BlueJ\lib\javafx-base-20.0.1.jar;C:\BlueJ\lib\javafx-controls-20.0.1-win.jar;C:\BlueJ\lib\javafx-controls-20.0.1.jar;C:\BlueJ\lib\javafx-fxml-20.0.1-win.jar;C:\BlueJ\lib\javafx-graphics-20.0.1-win.jar;C:\BlueJ\lib\javafx-graphics-20.0.1.jar;C:\BlueJ\lib\javafx-media-20.0.1-win.jar;C:\BlueJ\lib\javafx-media-20.0.1.jar;C:\BlueJ\lib\javafx-swing-20.0.1-win.jar;C:\BlueJ\lib\javafx-web-20.0.1-win.jar;C:\BlueJ\lib\junit-4.12.jar;C:\BlueJ\lib\junit-jupiter-5.5.2.jar;C:\BlueJ\lib\junit-jupiter-api-5.5.2.jar;C:\BlueJ\lib\junit-jupiter-engine-5.5.2.jar;C:\BlueJ\lib\junit-jupiter-params-5.5.2.jar;C:\BlueJ\lib\junit-platform-commons-1.5.2.jar;C:\BlueJ\lib\junit-platform-engine-1.5.2.jar;C:\BlueJ\lib\junit-platform-launcher-1.5.2.jar;C:\BlueJ\lib\junit-platform-suite-api-1.5.2.jar;C:\BlueJ\lib\junit-vintage-engine-5.5.2.jar;C:\BlueJ\lib\hamcrest-core-1.3.jar;C:\BlueJ\lib\opentest4j-1.2.0.jar;C:\BlueJ\lib\lang-stride.jar;C:\Users\2275514\OneDrive - Board of Education of SD 39 (Vancouver)\cs\csa\Problem set 4C\PS4C
-d
C:\Users\2275514\OneDrive - Board of Education of SD 39 (Vancouver)\cs\csa\Problem set 4C\PS4C\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\2275514\OneDrive - Board of Education of SD 39 (Vancouver)\cs\csa\Problem set 4C\PS4C\MacRev.java
<---- end of javadoc command ---->
Loading source file C:\Users\2275514\OneDrive - Board of Education of SD 39 (Vancouver)\cs\csa\Problem set 4C\PS4C\MacRev.java...
C:\Users\2275514\OneDrive - Board of Education of SD 39 (Vancouver)\cs\csa\Problem set 4C\PS4C\MacRev.java:1: error: class, interface, enum, or record expected
The first time I visited this McDonalds there were flowers placed in little bud vases -it was the middle of winter. It was such a charming thing to see. Food was good as well. It's a popular location and for an urban McDonalds it's well laid out floor plan with a good amount of seats.
^
C:\Users\2275514\OneDrive - Board of Education of SD 39 (Vancouver)\cs\csa\Problem set 4C\PS4C\MacRev.java:1: error: unclosed character literal
The first time I visited this McDonalds there were flowers placed in little bud vases -it was the middle of winter. It was such a charming thing to see. Food was good as well. It's a popular location and for an urban McDonalds it's well laid out floor plan with a good amount of seats.
                                                                                                                                                                                  ^
C:\Users\2275514\OneDrive - Board of Education of SD 39 (Vancouver)\cs\csa\Problem set 4C\PS4C\MacRev.java:1: error: unclosed character literal
The first time I visited this McDonalds there were flowers placed in little bud vases -it was the middle of winter. It was such a charming thing to see. Food was good as well. It's a popular location and for an urban McDonalds it's well laid out floor plan with a good amount of seats.
                                                                                                                                                                                                                                     ^
3 errors
